[package]
name = "LemonVM"
version = "0.1.2"
authors = ["lemonhx <lemonhx@lemonhx.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
libc = "0.2"
arrayvec = "0.5"
libloading = "0.6"
libffi = "0.9.0"