[package]
name = "LemonVM"
version = "0.1.2"
authors = ["lemonhx <lemonhx@lemonhx.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
libc = "0.2"
libloading = "0.6"
libffi = "0.9.0"
async-trait = "0.1.30"
colored = "1.9.3"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable","attributes"]
